Side Drawer alignment fixed

--- a/src/components/Header-Footer/SideDrawer/SideDrawer.css
+++ b/src/components/Header-Footer/SideDrawer/SideDrawer.css
@@ -2,7 +2,7 @@
   animation: slide 0.8s forwards;
   background-color: white;
   padding: 60px 35px 0 20px;
-  text-align: center;
+  text-align: left;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -38,6 +38,14 @@
 }
 
 .side-drawer-nav a:hover {
-  color: #ff5200;
+  color: hsl(9, 100%, 50%);
   text-decoration: underline;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
